--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.9"
 dependencies = [
     "boto3 (>=1.37.18,<2.0.0)",
     "python-dotenv (>=1.1.0,<2.0.0)",
-    "requests (>=2.32.3,<3.0.0)"
+    "requests (>=2.32.3,<3.0.0)",
+    "python-magic (>=0.4.27,<0.5.0)"
 ]
 
 [tool.poetry]
